changed M.S to MS

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title: Deepak Maurya
-description: M.S Scholar at CSE Dept., IIT Madras
+description: MS Scholar at CSE Dept., IIT Madras
 github:
   is_project_page: false
